source/css/core/power_ui_core.css
/* ... */
/* power menu-break query*/
    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .power-action,
    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .power-item,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-action,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-brand,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-item {
        display: block;
        width: max-content;
    }

    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .power-dropmenu .power-action,
    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .power-dropmenu .power-item,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-dropmenu .power-action,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-dropmenu .power-item {
        display: block;
        width: initial;
    }

    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse:not(.pw-bar-fixed) .power-action,
    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse:not(.pw-bar-fixed) .power-item,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) .power-action,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) .power-brand,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) .power-item {
        display: none;
    }

    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse:not(.pw-bar-fixed) {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) {
        display: flex;
        justify-content: space-between;
        align-items: top;
    }


    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed),
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) {
        display: block;
        justify-content: initial;
    }

    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse:not(.pw-bar-fixed) .power-toggle,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse:not(.pw-bar-fixed) .power-toggle {
        display: inline-block;
        text-align: right;
    }

    .pw-bar-break .pw-bar.pw-horizontal.pw-colapse.power-active:not(.pw-bar-fixed) .power-toggle,
    .pw-bar-break .pw-bar.pw-vertical.pw-colapse.power-active:not(.pw-bar-fixed) .power-toggle {
        display: none;
    }
/* power menu-break query*/

.pw-bar-fixed,
.pw-bar-window-fixed {
    position: fixed;
}

.pw-bar.pw-bar-fixed.pw-top {
    top: 0;
    left: 0;
}
.pw-bar.pw-bar-fixed.pw-bottom {
    bottom: 0;
    left: 0;
    margin: 0;
}
.pw-bar.pw-bar-fixed.pw-left {
    top: 0;
    left: 0;
    margin: 0;
    width: auto;
    height: 100vh;
}
.pw-bar.pw-bar-fixed.pw-right {
    top: 0;
    right: 0;
    margin: 0;
    width: auto;
    height: 100vh;
}

.pw-bar.pw-menu-float {
    width: auto;
}
.pw-bar.pw-menu-float.pw-left {
    float: left;
}
.pw-bar.pw-menu-float.pw-right {
    float: right;
}
/* Menu end*/

/* Dialog-Modal-Window start */
.pw-body iframe {
    margin: 0;
    z-index: 1;
    overflow: hidden;
}
.pw-cover-iframe {
    position: absolute;
    top: 0;
    z-index: 1001;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.1);
}
.pw-active .pw-cover-iframe {
    display: none;
}
.pw-modal .pw-body, .pw-dialog .pw-body {
    position: relative;
    overflow: auto;
    max-height: 90vh;
}
.pw-backdrop {
    z-index: 1000;
}
.pw-backdrop {
    position: fixed;
}
.pw-backdrop {
    padding: 1em 0 0 0;
    text-align: center;
    width: 100%;
    height: 100vh;
}
.pw-backdrop {
    top: 0;
    left: 0;
    background-color: rgb(0, 0, 0, 0.5);
}
.pw-dialog {
    top: 0;
    left: 0;
    padding-top: 20vh;
    z-index: 2501;
}
.pw-order {
    z-index: 4000 !important;
}

.window-left-top {
    cursor: nwse-resize;
}
.window-left-bottom {
    cursor: nesw-resize;
}
.window-width {
    cursor: ew-resize;
}
.window-height {
    cursor: ns-resize;
}
.pw-window  {
    position: fixed;
    top: 10px;
    left: 10px;
    padding: 5px;
    z-index: 1001;
    background-color: #000000;
    /*overflow: hidden;*/
}
.pw-window.pw-touchdevice,
.pw-small-window-mode .pw-window {
    top: 0;
    left: 0;
}
.pw-window .pw-body:not(.pw-body-iframe) {
    overflow: auto;
}
.pw-window, .pw-window .pw-body, .pw-window .pw-body iframe {
    max-width: 100%;
    max-height: 100vh;
}

.pw-window {
    min-width: 250px;
    min-height: 50px;
}

.pw-small-window-mode .pw-window {
    min-width: 150px;
}

.pw-window .pw-title-bar, .pw-window .pw-body, .pw-window iframe {
    min-width: 100%;
    max-width: 100%;
}
.pw-title-bar .pw-title-bar-label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 60%;
}
.pw-window.pw-touchdevice .pw-body,
.pw-small-window-mode .pw-window .pw-body {
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    max-width: 100%;
    max-height: 100vh;
}

.pw-window .pw-title-bar {
    cursor: grabbing;
    text-align: center;
    white-space: nowrap;
}
.window-is-maximized .pw-window .pw-title-bar, .pw-small-window-mode .pw-window .pw-title-bar {
    cursor: default;
}
.pw-modal .pw-body, .pw-modal .pw-title-bar {
    margin: 0 auto;
    width: 80%;
    max-width: 95vw;
}

.pw-modal.pw-touchdevice .pw-body,
.pw-modal.pw-touchdevice .pw-title-bar,
.pw-small-window-mode .pw-modal .pw-body,
.pw-small-window-mode .pw-modal .pw-title-bar {
    width: 95%;
    max-width: 100%;
}
.pw-dialog .pw-body, .pw-dialog .pw-title-bar {
    margin: 0 auto;
    width: 50em;
    max-width: 95%;
}
.pw-modal .pw-body, .pw-modal .pw-title-bar, .pw-dialog .pw-body, .pw-dialog .pw-title-bar, .pw-window {
    box-shadow: 5px 5px 10px 0 rgb(0, 0, 0, 0.5);
}

body.modal-open, body.window-is-maximized {
    overflow: hidden;
}
/* ... */

